<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/second_block_bg"
    android:elevation="0dp"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:padding="6dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/child_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/child_photo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_boy" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/child_name"
        style="@style/titleFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="Name"
        android:textColor="@color/secondBlock_textColor"
        app:layout_constraintStart_toEndOf="@id/card_view"
        app:layout_constraintTop_toTopOf="@id/card_view" />

    <TextView
        android:id="@+id/child_age"
        style="@style/descriptionFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/example_2_year"
        android:textColor="@color/secondBlock_extraTextColor"
        app:layout_constraintBottom_toBottomOf="@id/card_view"
        app:layout_constraintStart_toEndOf="@id/card_view" />

    <TextView
        android:id="@+id/child_weight"
        style="@style/descriptionFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/example_4_2_kg"
        android:textColor="@color/secondBlock_extraTextColor"
        app:layout_constraintBottom_toBottomOf="@id/child_age"
        app:layout_constraintStart_toEndOf="@id/child_age"
        app:layout_constraintTop_toTopOf="@id/child_age" />

    <TextView
        android:id="@+id/title_last"
        style="@style/descriptionFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="80dp"
        android:layout_marginStart="20dp"
        android:text="@string/title_last"
        app:layout_constraintBottom_toBottomOf="@id/child_name"
        app:layout_constraintStart_toEndOf="@id/child_weight"
        app:layout_constraintTop_toTopOf="@id/child_name" />

    <TextView
        android:id="@+id/child_temperature"
        style="@style/descriptionFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="80dp"
        android:text="@string/example_75_gr_c"
        app:layout_constraintBottom_toBottomOf="@id/child_age"
        app:layout_constraintStart_toStartOf="@id/title_last"
        app:layout_constraintEnd_toEndOf="@id/title_last"
        app:layout_constraintTop_toTopOf="@id/child_age" />

    <TextView
        android:id="@+id/sick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/example_short_date"
        app:layout_constraintBottom_toBottomOf="@id/child_name"
        app:layout_constraintTop_toTopOf="@id/child_name"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/child_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/example_2_3"
        app:layout_constraintBottom_toBottomOf="@id/child_age"
        app:layout_constraintTop_toTopOf="@id/child_age"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
