<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="#5553FF"
    app:cardCornerRadius="12dp"
    android:elevation="2dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_bg"
        android:paddingBottom="40dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="20dp"
        >

        <TextView
            android:id="@+id/header"
            style="@style/headerFontStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/photo_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:background="@color/dialog_borderColor"
                android:elevation="2dp"
                app:cardCornerRadius="4dp">

                <ImageView
                    android:id="@+id/child_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/photo_of_child"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_boy" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="10dp"
                android:background="@color/dialog_borderColor"
                android:elevation="2dp"
                app:cardCornerRadius="4dp">

                <ImageView
                    android:id="@+id/child_image1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/photo_of_child"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_boy" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@color/black"
                android:layout_marginStart="10dp"
                android:elevation="0dp"
                app:cardCornerRadius="4dp"
                >

                <ImageView
                    android:id="@+id/child_image2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/photo_of_child"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_girl" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

            <TextView
                android:id="@+id/choose_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/blue_btn_bg"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/add_photo"
                app:layout_constraintTop_toTopOf="@id/photo_layout"
                app:layout_constraintBottom_toBottomOf="@id/photo_layout"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/photo_layout">

            <TextView
                style="@style/dialogTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/name" />

            <EditText
                android:id="@+id/child_name"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:autofillHints=""
                android:background="@drawable/white_input_bg"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/enter_the_name"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/weight_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/name_layout">

            <TextView
                style="@style/dialogTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/title_weight" />

            <EditText
                android:id="@+id/child_weight"
                android:layout_width="60dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:autofillHints=""
                android:background="@drawable/white_input_bg"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:layout_gravity="center_vertical"
                android:hint="@string/example_10"
                android:inputType="text"
                tools:ignore="RtlSymmetry,TextFields" />
            <TextView
                style="@style/dialogTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/unit_kg" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView1"
            style="@style/dialogTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/birth_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weight_layout" />

        <DatePicker
            android:id="@+id/child_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:textColor="@color/dialog_textColor"
            app:layout_constraintTop_toBottomOf="@id/textView1" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancel_button_layout"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button_layout"
            >

            <include
                android:id="@+id/add_button"
                layout="@layout/view_add_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/save_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cancel_button_layout"
            app:layout_constraintBottom_toBottomOf="@id/cancel_button_layout"
            >

            <include
                android:id="@+id/save_button"
                layout="@layout/view_save_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cancel_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/child_date"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <include
                android:id="@+id/cancel_button"
                layout="@layout/view_cancel_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>